--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
                                 <p><span class="font2">마부작침</span>하는 마음으로 황소처럼 우직하게 나아가겠습니다.</p>
                             </div>
                             <div class="ability">
-                                <h3 class="font2">ABILITY</h3>
+                                <div class="dif">
+                                    <h3 class="font2">ABILITY</h3>
+                                    <img src="./img/finger.png" alt="">
+                                    <p>CLICK!</p>
+                                </div>
                                 <div class="tab_box">
                                     <div class="circle"></div>
                                     <div class="circle"></div>
@@ -154,15 +158,58 @@
         
     </main>
 
+    <div class="cursor"></div>
+    <div class="top_btn">
+        <a href=".intro"><i class="fas fa-arrow-circle-up"></i></a>
+    </div>
+    <div class="dark"></div>
+    <div class="popup">
+        <div class="close">×</div>
+        <h2>보유기술</h2>
+        <div class="dif_popup">
+            <img src="./img/HTML5.png" alt="html 로고이미지">
+            <p>HTML5 : 다양한 프레임워크를 활용해 웹페이지를 만들 수 있습니다. 흔히 사용되는 div태그 말고도 article, section, header, footer 등 다양한 태그를 활용하여 구조적인 체계를 지키려고 노력합니다.ink태그를 통해 css,js와 연결해 좀 더 동적인 웹사이트를 만들 수 있습니다. Font Awesome과 구글폰트를 사용해 다양한 디자인을 연출할 수 있습니다.</p>
+        </div>
+        <div class="dif_popup">
+            <img src="./img/css3.png" alt="css 로고이미지">
+            <p>CSS3 : css만으로도 디자인 컨셉에 맞는 애니메이션 기능을 구현하고 미디어쿼리를 이용하여 반응형 웹페이지를 직접 제작할 수 있습니다. 크로스 브라우징을 숙지하여 크롬,인터넷 익스플로러,엣지 등 다른 브라우저에서 동일한 화면을 구현할 수 있습니다.</p>
+        </div>
+        <div class="dif_popup">
+            <img src="./img/jQuery.png" alt="제이쿼리 로고이미지">
+            <p>jQuery : 어떤 메뉴를 클릭시 scroll을 올리거나 내리는 기능을 구현할 수 있고, 웹페이지 배너 부분의 이미지 슬라이드를 직접 코딩하여 제작할 수 있습니다. slick.js, type.js 등 플러그인을 활용하여 필요한 기능을 구현할 수 있습니다.</p>
+        </div>
+        <div class="dif_popup">
+            <img src="./img/javascript.png" alt="자바스크립트 로고이미지">
+            <p>Javascript : 다양한 프레임워크를 활용해 웹페이지를 만들 수 있습니다.</p>
+        </div>
+    </div>
+    <div class="popup_second">
+        <div class="close">×</div>
+        <h2>보유기술</h2>
+        <div class="dif_popup">
+            <img src="./img/photoshop.png" alt="photoshop 로고이미지">
+            <p>PHOTOSHOP : 이미지를 직접 제작하고 이를 웹전용 이미지로 변환할 수 있습니다.기본적인 펜툴이나 도형툴에 대한 이해를 바탕으로 레이어를 통해 직접 컨셉에 맞는 이미지 만들 수 있습니다.</p>
+        </div>
+        <div class="dif_popup">
+            <img src="./img/illustrator.png" alt="illustrator 로고이미지">
+            <p>ILLUSTRATOR : 로고를 제작하거나 이를 웹페이지에 바로 적용시킬 수 있습니다.이미지가 백터단위로 포토샵과는 다르게 깨지지 않는 이점을 이용하여 펜툴을 더 자유롭게 활용하여 의뢰인의 컨셉에 맞는 디자인을 할 수 있습니다.</p>
+        </div>
+        <div class="dif_popup">
+            <img src="./img/php.png" alt="php 로고이미지">
+            <p>PHP : 서버환경에서 mysql을 활용하여 데이터베이스를 적용할 수 있습니다.mysql을 이용하여 로컬 환경과 닷홈(서버) 환경에서 데이터를 직접 작성해본 경험이 있습니다.</p>
+        </div>
+        <div class="dif_popup">
+            <img src="./img/MySQL.png" alt="mysql 로고이미지">
+            <p>MYSQL : HeidiSQL,mysql을 이용하여 좀 더 동적인 웹사이트를 제작할 수 있습니다.MySQL의 CRUD를 이용하여 데이터베이스와 연동하여 웹사이트를 제작해본 경험이 있습니다.</p>
+        </div>
+    </div>
+
     <script src="https://kit.fontawesome.com/9450577c55.js" crossorigin="anonymous"></script>
     <script src="./js/form-submission-handler.js"></script>
     <script src="./js/typed.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/script.js"></script>
 
-    <div class="top_btn">
-        <a href=".intro"><i class="fas fa-arrow-circle-up"></i></a>
-    </div>
 
 </body>
 </html>
