--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <section class="about box">
             <div class="wrap">
                 <div class="profile">
+                    <h2 class="guide">상단에<br>메뉴바 ABOUT을 클릭하세요!</h2>
                     <div class="contents">
                         <div class="cont1">
                             <div class="identification_photo">
@@ -183,8 +184,8 @@
         </div>
         <div class="dif_popup">
             <img src="./img/javascript.png" alt="자바스크립트 로고이미지">
-            <p>Javascript : 다양한 프레임워크를 활용해 웹페이지를 만들 수 있습니다.</p>
-            <p class="res_p">Javascript : 다양한 프레임워크를 활용해 웹페이지를 만들 수 있습니다.</p>
+            <p>Javascript : 기본 문법에 맞게 활용할 수 있습니다.</p>
+            <p class="res_p">Javascript : 기본 문법에 맞게 활용할 수 있습니다.</p>
         </div>
     </div>
     <div class="popup_second">
